--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
+    "@types/bcryptjs": "2.4.6",
+    "bcryptjs": "2.4.3",
     "D": "1.0.0",
     "dotenv": "16.4.5",
     "fastify": "5.0.0",
