feat: Adds authentication

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vite-tsconfig-paths": "5.1.0"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.1",
+    "@fastify/jwt": "9.0.1",
     "@prisma/client": "5.21.1",
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "2.4.3",
