--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@fastify/jwt": "9.0.1",
     "@prisma/client": "5.21.1",
     "@types/bcryptjs": "2.4.6",
+    "@types/supertest": "6.0.2",
     "bcryptjs": "2.4.3",
     "D": "1.0.0",
     "dotenv": "16.4.5",
     "fastify": "5.0.0",
+    "supertest": "7.0.0",
     "vitest": "2.1.4",
     "zod": "3.23.8"
   }
